# genropy

./: .flake8  .gitignore  AUTHORS  BRANCH_SEPARATION_COMPLETE.md  CLAUDE.md  DBSTORES_BRANCH_NOTES.md  DBSTORES_STORETABLE_REFACTOR.md  DBSTORES_STORETABLE_REFACTOR_TICKET.md  DISPATCHER_REFACTORING_SUMMARY.md  Dockerfile  Dockerfile.alpine  GENRO_STORAGE_ISSUE.md  LICENSE-3RD-PARTY  MULTIDB_TESTING_TICKET.md  MULTIDOMAIN_FIX_README.md  MULTIDOMAIN_WORKSPACE.md  MULTIDOMAIN_WORKSPACE_TICKET.md  README.IMPORTANT  README.md  SPLIT_LOG.md  bitbucket-pipelines.yml  clean_export.py  localization.xml  projects_structure_converter.py  pyproject.toml  test_multidomain_fix.py
gnrpy/: .gitignore  BUILD.md  MANIFEST.in  README.md  RELEASE_NOTES.rst  initgenropy.py  pavement.py  pyproject.toml  requirements.txt
gnrpy/debian/: .gitignore  changelog  control  rules
gnrpy/gnr/: __init__.py
gnrpy/gnr/app/: __init__.py  esmbuilder.py  gnrapp.py  gnrapplistener.py  gnrbuilder.py  gnrconfig.py  gnrdbo.py  gnrdbo_legacy.py  gnrdeploy.py  gnrlistener.py  gnrlocalization.py  gnrtransactiond.py  gnrtransactionmanager.py  gnrutils.py  pathresolver.py
gnrpy/gnr/core/: __init__.py  flatfiles.py  gnranalyzingbag.py  gnranalyzingbag_review.md  gnrbag.py  gnrbageditor.py  gnrbageditor_review.md  gnrbaggeocoder.py  gnrbaghtml.py  gnrbagnode.py  gnrbagresolver.py  gnrbagxml.py  gnrbaseservice.py  gnrbaseservice_review.md  gnrbasetask.py  gnrcaldav.py  gnrcaldav_review.md  gnrclasses.py  gnrconfig.py  gnrconfig_review.md  gnrcrypto.py  gnrcrypto_review.md  gnrdate.py  gnrdatetime.py  gnrdatetime_review.md  gnrdecorator.py  gnrdecorator_review.md  gnrdict.py  gnrdict_review.md  gnrenv.py  gnrenv_review.md  gnrerror.py  gnrexporter.py  gnrexporter_review.md  gnrgit.py  gnrgit_review.md  gnrhtml.py  gnrlang.py  gnrlist.py  gnrlocale.py  (+24 more)
gnrpy/gnr/db/: __init__.py
gnrpy/gnr/dev/: __init__.py  builder.py  decorator.py  mobilechecks.py  packagetester.py  testbase.py
gnrpy/gnr/devel/: commands.py  utils.py
gnrpy/gnr/lib/: __init__.py
gnrpy/gnr/prj/: __init__.py
gnrpy/gnr/sql/: PersistentDB.py  SteadyDB.py  ThreadingLocal.py  __init__.py  _typing.py  gnrslowqueryanalyzer.py  gnrslowquerylogger.py  gnrsql.py  gnrsql_exceptions.py  gnrsql_random.py  gnrsqldata.py  gnrsqldata_compiler.py  gnrsqldata_query.py  gnrsqldata_record.py  gnrsqldata_selection.py  gnrsqlmigration.py  gnrsqlmodel.py  gnrsqltable.py  gnrsqlutils.py  gnrsqlxml2py.py  pgutils.py
gnrpy/gnr/utils/: __init__.py  awsmanager.py  dockercompose.py  fonts.py  gnrmail.py  ssmtplib.py
gnrpy/gnr/web/: __init__.py  _gnrbasewebpage.py  compression.py  gnrasync.py  gnrasync_aio.py  gnrasync_session.py  gnrbaseclasses.py  gnrcookie.py  gnrdaemonhandler.py  gnrdaemonhandler_multidomain.py  gnrdaemonprocesses.py  gnrdojo.py  gnrhtmlpage.py  gnrk8s.py  gnrmenu.py  gnrsimplepage.py  gnrtablescript.py  gnrtablescript_new.py  gnrtask.py  gnrtask_new.py  gnrwebapp.py  gnrwebpage.py  gnrwebreqresp.py  gnrwebstruct.py  gnrwebutils.py  gnrwsgisite.py  jsmin.py  server.py  serverwsgi.py  serverwsgi_legacy.py  tornado_wsgi.py  verifiers.py
gnrpy/gnr/xtnd/: __init__.py  gnrhtmltables.py  gnrpandas.py  gnrpdf.py  gnrplatypus.py  gnrrml.py  gnrstats.py  gnrsuds.py  gnrtimestamp.py  soap4D.py  sync4Dapp.py  sync4Dapp_new.py  sync4Dpyro.py  sync4Dtransaction.py  sync4Dutils.py
gnrpy/tests/: .coveragerc  .gitignore  Makefile  TESTING.md
gnrpy/tests/app/: Makefile  common.py  conftest.py  gnrapp_test.py  gnrconfig_test.py  gnrdbo_test.py  gnrdeploy_test.py  gnrlocalization_test.py  gnrtransactiond_test.py  gnrtransactionmanager_test.py  pathresolver_test.py  test_api_engine.py  test_authtagstruct.py  test_gnrapp_db_attrs.py  test_gnrsqlappdb.py  test_gnrutils.py  test_instance_test_invoice.py  testing_test.py
gnrpy/tests/core/: Makefile  common.py  flatfiles_test.py  gnranalyzingbag_test.py  gnrbag_resolvers_test.py  gnrbag_test.py  gnrbageditor_test.py  gnrbaghtml_test.py  gnrbagxml_test.py  gnrbaseservice_test.py  gnrbasetask_test.py  gnrcaldav_test.py  gnrclasses_test.py  gnrconfig_test.py  gnrcrypto_test.py  gnrdate_test.py  gnrdatetime_test.py  gnrdecorator_test.py  gnrdict_test.py  gnrenv_test.py  gnrexporter_test.py  gnrgit_test.py  gnrhtml_test.py  gnrlang_test.py  gnrlist_test.py  gnrlog_test.py  gnrnumber_test.py  gnrprinthandler_test.py  gnrredbaron_test.py  gnrremotebag_test.py  gnrresolver_test.py  gnrrlab_test.py  gnrssh_test.py  gnrstorage_test.py  gnrstorage_wrapper_test.py  gnrstring_test.py  gnrstructures_test.py  gnrsys_test.py  gnrvobject_test.py  gnrxls_test.py  (+7 more)
gnrpy/tests/datafiles/: instanceconfig.xml
gnrpy/tests/devel/: gnrcmd_test.py
gnrpy/tests/sql/: .gitignore  Makefile  a_structure_load_test.py  b_structure_build_test.py  benchmark_subquery_join.py  common.py  conftest.py  d_table_test.py  dbstructure.xml  e_query_test.py  f_selection_test.py  h_query_surface_test.py  h_record_surface_test.py  h_selection_surface_test.py  test_adapterinheritance.py  test_compiler_coverage.py  test_compiler_simulation.py  test_composite_column.py  test_compound_query.py  test_condensation.py  test_connection_error.py  test_db_notify.py  test_deepdiff.py  test_encrypted_columns.py  test_gnrbaseadapter.py  test_gnrexceptions.py  test_gnrlistener.py  test_gnrsql.py  test_gnrsql_random.py  test_gnrsqlmigration.py  test_gnrsqlutils.py  test_gnrsqlxml2py.py  test_import_export_tojson.py  test_instance_sandboxpg.py  test_macro_registration.py  test_migration_bugs.py  test_model_structure.py  test_re_sql_params.py  test_relations_benchmark.py  test_relations_thread_safe.py  (+2 more)
gnrpy/tests/utils/: dockercompose_test.py
gnrpy/tests/web/: Makefile  conftest.py  gnrasync_session_test.py  gnrasync_test.py  gnrbaseclasses_test.py  gnrcookie_test.py  gnrdaemon.py  gnrdaemonhandler_test.py  gnrdaemonprocesses_test.py  gnrdojo_test.py  gnrdummysite_test.py  gnrfreezeselection_test.py  gnrheadlesspage_test.py  gnrhtmlpage_test.py  gnrmenu_test.py  gnrsimplepage_test.py  gnrsoappage_test.py  gnrsoappagenew_test.py  gnrstoragehandler_test.py  gnrtask_test.py  (+21 more)
(+765 files in other folders)
