[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
name = "gnrpy"
dynamic = ["version", "readme"]

authors = [
    {name = "Softwell Srl", email = "info@genropy.org"},
]

maintainers = [
  {name = "Michele Bertoldi", email = "michele.bertoldi@softwell.it" }
]
description = "GenroPy Web Framework"
requires-python = ">=3.9"
keywords = ["web", "framework", "SPA applications"]
license = {file = "LICENSE" }
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: LGPL",
]
dependencies = [
	     "python-dateutil",
	     "paste",
	     "mako",
	     "vobject",
	     "pytz",
	     "babel",
	     "httplib2",
#	     "selectors34", #apparently abandoned
#	     "serpent<1.30", #it's a pyro dependencies, so it seem
                             #not necessary to list it here
	     "pyro4",
	     "argparse",
	     "xlrd",
	     "xlwt",
	     "docutils",
	     "redbaron",
	     "future", # evaluate if needed
	     "boto3",
	     "smart_open==4.2.0",
	     "gunicorn",
	     "supervisor",
	     "lxml",
	     "openpyxl",
	     "psutil",
	     "simpleeval",
	     "webob",
	     "werkzeug<2.0",
	     "six", # evaluate if needed
	     "tzlocal",
	     "pyyaml",
	     "chardet",
	     "jsmin",
	     ]

[project.urls]  
"Homepage" = "https://www.genropy.org/"
"Bug Reports" = "https://bitbucket.org/genropy/"
"Source" = "https://bitbucket.org/genropy/"

[tool.setuptools.dynamic]
version = {attr = "gnrpy.VERSION"}
readme = {file = ["README.md"]}

[tool.setuptools]
package-data = {"sample" = ["*.dat"]}
package-dir = {"gnr" = "gnrpy/gnr"}
packages = ['gnr',
	    'gnr.core',
	    'gnr.app',
	    'gnr.web',
	    'gnr.sql']



# scripts = ['scripts/gnrdbsetup', 'scripts/gnrmkinstance', 'scripts/gnrmkthresource',
#                  'scripts/gnrmksite', 'scripts/gnrmkpackage',
#                  'scripts/gnrwsgiserve', 'scripts/gnrmkapachesite','scripts/gnrdaemon',
#                  'scripts/gnrdbsetupparallel', 'scripts/gnrtrdaemon', 'scripts/gnrsync4d', 
#                  'scripts/gnrmkproject', 'scripts/gnrsyncstorage', 'scripts/gnrasync',
#                  'scripts/gnrtaskworker','scripts/gnrtaskscheduler', 'scripts/gnrupdate','scripts/gnrdeploybuilder','scripts/gnrrms',
#                  'scripts/gnrrms','scripts/gnrserviceworker','scripts/gnrdbshell']




